Upgrade and pin Java and JUnit versions. Fixes test for simple play run. Cleanup and improve code.